✨ Add enhanced dark mode, full i18n support, and wishlist feature
- Enhanced dark mode with smooth CSS transitions and custom variables
- Complete Arabic/English translation coverage (40+ keys)
- New wishlist feature with dedicated page and localStorage persistence
- Improved UI with hover effects and better accessibility
- Updated all components to support translations
- Added WishlistProvider context for state management

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -3,6 +3,41 @@
   "products": "المنتجات",
   "myOrders": "طلباتي",
   "cart": "عربة التسوق",
+  "wishlist": "المفضلة",
   "searchPlaceholder": "ابحث عن ساعات، مثلاً 'روز'",
-  "continueShopping": "واصل التسوق"
+  "continueShopping": "واصل التسوق",
+  "allRightsReserved": "جميع الحقوق محفوظة",
+  "switchLanguage": "تبديل اللغة",
+  "switchToDark": "التبديل إلى الوضع الداكن",
+  "switchToLight": "التبديل إلى الوضع المضيء",
+  "openCart": "فتح عربة التسوق",
+  "addToCart": "أضف إلى السلة",
+  "addToWishlist": "أضف إلى المفضلة",
+  "removeFromWishlist": "إزالة من المفضلة",
+  "viewDetails": "عرض التفاصيل",
+  "price": "السعر",
+  "quantity": "الكمية",
+  "total": "الإجمالي",
+  "checkout": "إتمام الشراء",
+  "emptyCart": "عربة التسوق فارغة",
+  "emptyWishlist": "قائمة المفضلة فارغة",
+  "home": "الرئيسية",
+  "about": "من نحن",
+  "contact": "اتصل بنا",
+  "premiumWatches": "ساعات فاخرة وإكسسوارات",
+  "featuredProducts": "منتجات مميزة",
+  "newArrivals": "وصل حديثاً",
+  "bestSellers": "الأكثر مبيعاً",
+  "shopNow": "تسوق الآن",
+  "learnMore": "اعرف المزيد",
+  "loading": "جاري التحميل...",
+  "error": "حدث خطأ",
+  "tryAgain": "حاول مرة أخرى",
+  "noProducts": "لا توجد منتجات",
+  "filter": "تصفية",
+  "sort": "ترتيب",
+  "sortByPrice": "ترتيب حسب السعر",
+  "sortByName": "ترتيب حسب الاسم",
+  "lowToHigh": "من الأقل إلى الأعلى",
+  "highToLow": "من الأعلى إلى الأقل"
 }
