--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,41 @@
   "products": "Products",
   "myOrders": "My Orders",
   "cart": "Cart",
+  "wishlist": "Wishlist",
   "searchPlaceholder": "Search watches, e.g. 'rose'",
-  "continueShopping": "Continue shopping"
+  "continueShopping": "Continue shopping",
+  "allRightsReserved": "All rights reserved",
+  "switchLanguage": "Switch language",
+  "switchToDark": "Switch to dark mode",
+  "switchToLight": "Switch to light mode",
+  "openCart": "Open cart",
+  "addToCart": "Add to Cart",
+  "addToWishlist": "Add to Wishlist",
+  "removeFromWishlist": "Remove from Wishlist",
+  "viewDetails": "View Details",
+  "price": "Price",
+  "quantity": "Quantity",
+  "total": "Total",
+  "checkout": "Checkout",
+  "emptyCart": "Your cart is empty",
+  "emptyWishlist": "Your wishlist is empty",
+  "home": "Home",
+  "about": "About",
+  "contact": "Contact",
+  "premiumWatches": "Premium watches & accessories",
+  "featuredProducts": "Featured Products",
+  "newArrivals": "New Arrivals",
+  "bestSellers": "Best Sellers",
+  "shopNow": "Shop Now",
+  "learnMore": "Learn More",
+  "loading": "Loading...",
+  "error": "An error occurred",
+  "tryAgain": "Try Again",
+  "noProducts": "No products found",
+  "filter": "Filter",
+  "sort": "Sort",
+  "sortByPrice": "Sort by Price",
+  "sortByName": "Sort by Name",
+  "lowToHigh": "Low to High",
+  "highToLow": "High to Low"
 }
