feat: Add new pages (About, Contact), enhanced Home page, and overall design improvements with extended i18n

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -4,7 +4,7 @@
   "myOrders": "طلباتي",
   "cart": "عربة التسوق",
   "wishlist": "المفضلة",
-  "searchPlaceholder": "ابحث عن ساعات، مثلاً 'روز'",
+  "searchPlaceholder": "ابحث عن منتجات...",
   "continueShopping": "واصل التسوق",
   "allRightsReserved": "جميع الحقوق محفوظة",
   "switchLanguage": "تبديل اللغة",
@@ -39,5 +39,88 @@
   "sortByPrice": "ترتيب حسب السعر",
   "sortByName": "ترتيب حسب الاسم",
   "lowToHigh": "من الأقل إلى الأعلى",
-  "highToLow": "من الأعلى إلى الأقل"
+  "highToLow": "من الأعلى إلى الأقل",
+  "categories": "الفئات",
+  "smartphones": "الهواتف الذكية",
+  "phoneAccessories": "ملحقات الهواتف",
+  "watches": "الساعات",
+  "heroBanner": "أحدث المنتجات والعروض الحصرية",
+  "discountUp": "خصم يصل إلى",
+  "percent": "%",
+  "onSelectedItems": "على المنتجات المختارة",
+  "aboutUs": "من نحن",
+  "aboutUsDescription": "متجر جلوري هو وجهتك الأولى للحصول على أفضل الهواتف الذكية والساعات الفاخرة والملحقات الإلكترونية بأسعار تنافسية.",
+  "contactUs": "اتصل بنا",
+  "contactUsDescription": "نحن هنا للإجابة على جميع استفساراتك. تواصل معنا عبر البريد الإلكتروني أو الهاتف أو النموذج أدناه.",
+  "email": "البريد الإلكتروني",
+  "phone": "الهاتف",
+  "message": "الرسالة",
+  "send": "إرسال",
+  "name": "الاسم",
+  "subject": "الموضوع",
+  "ourMission": "مهمتنا",
+  "ourMissionText": "نسعى لتوفير أفضل تجربة تسوق إلكترونية مع منتجات عالية الجودة وخدمة عملاء ممتازة.",
+  "whyChooseUs": "لماذا تختارنا",
+  "qualityProducts": "منتجات عالية الجودة",
+  "fastShipping": "شحن سريع",
+  "bestPrice": "أفضل الأسعار",
+  "excellentService": "خدمة عملاء ممتازة",
+  "securePayment": "دفع آمن",
+  "easyReturns": "إرجاع سهل",
+  "followUs": "تابعنا",
+  "quickLinks": "روابط سريعة",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsConditions": "الشروط والأحكام",
+  "shippingInfo": "معلومات الشحن",
+  "faq": "الأسئلة الشائعة",
+  "dashboard": "لوحة التحكم",
+  "logout": "تسجيل الخروج",
+  "login": "تسجيل الدخول",
+  "register": "إنشاء حساب",
+  "signIn": "دخول",
+  "createAccount": "إنشاء حساب جديد",
+  "fullName": "الاسم الكامل",
+  "password": "كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+  "dontHaveAccount": "ليس لديك حساب؟",
+  "invalidCredentials": "بيانات دخول غير صحيحة",
+  "registrationSuccess": "تم التسجيل بنجاح",
+  "loginSuccess": "تم تسجيل الدخول بنجاح",
+  "allProducts": "جميع المنتجات",
+  "rating": "التقييم",
+  "reviews": "التقييمات",
+  "inStock": "متوفر",
+  "outOfStock": "غير متوفر",
+  "addedToCart": "تمت الإضافة إلى السلة",
+  "addedToWishlist": "تمت الإضافة إلى المفضلة",
+  "removedFromWishlist": "تم الحذف من المفضلة",
+  "viewCart": "عرض السلة",
+  "continueBrowsing": "المتابعة للتسوق",
+  "relatedProducts": "منتجات ذات صلة",
+  "customerReviews": "تقييمات العملاء",
+  "writeReview": "اكتب تقييماً",
+  "noReviews": "لا توجد تقييمات حتى الآن",
+  "address": "العنوان",
+  "city": "المدينة",
+  "country": "الدولة",
+  "zipCode": "الرمز البريدي",
+  "editProfile": "تعديل الملف الشخصي",
+  "saveChanges": "حفظ التغييرات",
+  "profileUpdated": "تم تحديث الملف الشخصي بنجاح",
+  "orderHistory": "سجل الطلبات",
+  "totalOrders": "إجمالي الطلبات",
+  "totalSpent": "إجمالي الإنفاق",
+  "favoriteProducts": "المنتجات المفضلة",
+  "cartItems": "عناصر السلة",
+  "quickActions": "إجراءات سريعة",
+  "continueShoppingBtn": "المتابعة للتسوق",
+  "myWishlist": "قائمتي المفضلة",
+  "myOrders": "طلباتي",
+  "profileInformation": "معلومات الملف الشخصي",
+  "role": "الدور",
+  "user": "مستخدم",
+  "admin": "مسؤول",
+  "welcomeBack": "أهلا بعودتك",
+  "hereIsWhat": "إليك ما يحدث في متجرك اليوم"
 }
