--- a/locales/en.json
+++ b/locales/en.json
@@ -4,7 +4,7 @@
   "myOrders": "My Orders",
   "cart": "Cart",
   "wishlist": "Wishlist",
-  "searchPlaceholder": "Search watches, e.g. 'rose'",
+  "searchPlaceholder": "Search products...",
   "continueShopping": "Continue shopping",
   "allRightsReserved": "All rights reserved",
   "switchLanguage": "Switch language",
@@ -39,5 +39,88 @@
   "sortByPrice": "Sort by Price",
   "sortByName": "Sort by Name",
   "lowToHigh": "Low to High",
-  "highToLow": "High to Low"
+  "highToLow": "High to Low",
+  "categories": "Categories",
+  "smartphones": "Smartphones",
+  "phoneAccessories": "Phone Accessories",
+  "watches": "Watches",
+  "heroBanner": "Latest Products & Exclusive Offers",
+  "discountUp": "Discount up to",
+  "percent": "%",
+  "onSelectedItems": "on selected items",
+  "aboutUs": "About Us",
+  "aboutUsDescription": "Glory Store is your first destination for the best smartphones, luxury watches, and electronic accessories at competitive prices.",
+  "contactUs": "Contact Us",
+  "contactUsDescription": "We're here to answer all your questions. Contact us via email, phone, or the form below.",
+  "email": "Email",
+  "phone": "Phone",
+  "message": "Message",
+  "send": "Send",
+  "name": "Name",
+  "subject": "Subject",
+  "ourMission": "Our Mission",
+  "ourMissionText": "We strive to provide the best online shopping experience with high-quality products and excellent customer service.",
+  "whyChooseUs": "Why Choose Us",
+  "qualityProducts": "Quality Products",
+  "fastShipping": "Fast Shipping",
+  "bestPrice": "Best Prices",
+  "excellentService": "Excellent Service",
+  "securePayment": "Secure Payment",
+  "easyReturns": "Easy Returns",
+  "followUs": "Follow Us",
+  "quickLinks": "Quick Links",
+  "privacyPolicy": "Privacy Policy",
+  "termsConditions": "Terms & Conditions",
+  "shippingInfo": "Shipping Info",
+  "faq": "FAQ",
+  "dashboard": "Dashboard",
+  "logout": "Logout",
+  "login": "Login",
+  "register": "Register",
+  "signIn": "Sign In",
+  "createAccount": "Create Account",
+  "fullName": "Full Name",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "alreadyHaveAccount": "Already have an account?",
+  "dontHaveAccount": "Don't have an account?",
+  "invalidCredentials": "Invalid credentials",
+  "registrationSuccess": "Registration successful",
+  "loginSuccess": "Login successful",
+  "allProducts": "All Products",
+  "rating": "Rating",
+  "reviews": "Reviews",
+  "inStock": "In Stock",
+  "outOfStock": "Out of Stock",
+  "addedToCart": "Added to cart",
+  "addedToWishlist": "Added to wishlist",
+  "removedFromWishlist": "Removed from wishlist",
+  "viewCart": "View Cart",
+  "continueBrowsing": "Continue Browsing",
+  "relatedProducts": "Related Products",
+  "customerReviews": "Customer Reviews",
+  "writeReview": "Write a Review",
+  "noReviews": "No reviews yet",
+  "address": "Address",
+  "city": "City",
+  "country": "Country",
+  "zipCode": "Zip Code",
+  "editProfile": "Edit Profile",
+  "saveChanges": "Save Changes",
+  "profileUpdated": "Profile updated successfully",
+  "orderHistory": "Order History",
+  "totalOrders": "Total Orders",
+  "totalSpent": "Total Spent",
+  "favoriteProducts": "Favorite Products",
+  "cartItems": "Cart Items",
+  "quickActions": "Quick Actions",
+  "continueShoppingBtn": "Continue Shopping",
+  "myWishlist": "My Wishlist",
+  "myOrders": "My Orders",
+  "profileInformation": "Profile Information",
+  "role": "Role",
+  "user": "User",
+  "admin": "Admin",
+  "welcomeBack": "Welcome back",
+  "hereIsWhat": "Here's what's happening with your store today"
 }
