feat: Implement all requested features (filtering, sorting, auth, order history, reviews, advanced search, comparison, email, social share)

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -122,5 +122,51 @@
   "user": "مستخدم",
   "admin": "مسؤول",
   "welcomeBack": "أهلا بعودتك",
-  "hereIsWhat": "إليك ما يحدث في متجرك اليوم"
+  "all_categories": "جميع الفئات",
+  "sort_by": "الترتيب حسب",
+  "sort_newest": "الأحدث",
+  "sort_price_low_to_high": "السعر: من الأقل للأعلى",
+  "sort_price_high_to_low": "السعر: من الأعلى للأقل",
+  "sort_rating_high_to_low": "التقييم: من الأعلى للأقل",
+  "price_range": "نطاق السعر",
+  "min_price": "الحد الأدنى للسعر",
+  "max_price": "الحد الأقصى للسعر",
+  "loading_products": "جاري تحميل المنتجات",
+  "no_products_found": "لم يتم العثور على منتجات",
+  "hereIsWhat": "إليك ما يحدث في متجرك اليوم",
+  "login_required_for_order_history": "يجب عليك تسجيل الدخول لعرض سجل طلباتك.",
+  "no_orders_found": "لم يتم العثور على طلبات.",
+  "start_shopping_to_see_orders": "ابدأ التسوق لرؤية طلباتك هنا.",
+  "order_number": "رقم الطلب",
+  "order_date": "تاريخ الطلب",
+  "delivered": "تم التوصيل",
+  "shipped": "تم الشحن",
+  "pending": "قيد الانتظار",
+  "cancelled": "ملغى",
+  "login_to_submit_review": "يجب عليك تسجيل الدخول لتقديم تقييم.",
+  "rating_and_comment_required": "التقييم والتعليق مطلوبان.",
+  "failed_to_submit_review": "فشل في إرسال التقييم.",
+  "review_submitted_successfully": "تم إرسال التقييم بنجاح!",
+  "already_reviewed": "لقد قمت بتقييم هذا المنتج بالفعل.",
+  "your_rating": "تقييمك",
+  "your_comment": "تعليقك",
+  "share_your_experience": "شارك تجربتك مع هذا المنتج...",
+  "submit_review": "إرسال التقييم",
+  "login_to_submit_review_prompt": "يرجى تسجيل الدخول لتقديم تقييم.",
+  "loading_reviews": "جاري تحميل التقييمات",
+  "min_rating": "الحد الأدنى للتقييم",
+  "any": "أي",
+  "stars": "نجوم",
+  "product_comparison": "مقارنة المنتجات",
+  "add_to_compare": "أضف للمقارنة",
+  "remove_from_compare": "إزالة من المقارنة",
+  "no_products_to_compare_message": "أضف ما يصل إلى 3 منتجات لمقارنة ميزاتها جنبًا إلى جنب.",
+  "browse_products": "تصفح المنتجات",
+  "clear_comparison": "مسح المقارنة",
+  "feature": "الميزة",
+  "remove": "إزالة",
+  "add_product": "أضف منتج",
+  "description": "الوصف",
+  "category": "الفئة",
+  "share_this_product": "شارك هذا المنتج"
 }
