--- a/locales/en.json
+++ b/locales/en.json
@@ -122,5 +122,51 @@
   "user": "User",
   "admin": "Admin",
   "welcomeBack": "Welcome back",
-  "hereIsWhat": "Here's what's happening with your store today"
+  "all_categories": "All Categories",
+  "sort_by": "Sort By",
+  "sort_newest": "Newest",
+  "sort_price_low_to_high": "Price: Low to High",
+  "sort_price_high_to_low": "Price: High to Low",
+  "sort_rating_high_to_low": "Rating: High to Low",
+  "price_range": "Price Range",
+  "min_price": "Min Price",
+  "max_price": "Max Price",
+  "loading_products": "Loading products",
+  "no_products_found": "No products found",
+  "hereIsWhat": "Here's what's happening with your store today",
+  "login_required_for_order_history": "You must be logged in to view your order history.",
+  "no_orders_found": "No orders found.",
+  "start_shopping_to_see_orders": "Start shopping to see your orders here.",
+  "order_number": "Order Number",
+  "order_date": "Order Date",
+  "delivered": "Delivered",
+  "shipped": "Shipped",
+  "pending": "Pending",
+  "cancelled": "Cancelled",
+  "login_to_submit_review": "You must be logged in to submit a review.",
+  "rating_and_comment_required": "Rating and comment are required.",
+  "failed_to_submit_review": "Failed to submit review.",
+  "review_submitted_successfully": "Review submitted successfully!",
+  "already_reviewed": "You have already reviewed this product.",
+  "your_rating": "Your Rating",
+  "your_comment": "Your Comment",
+  "share_your_experience": "Share your experience with this product...",
+  "submit_review": "Submit Review",
+  "login_to_submit_review_prompt": "Please log in to submit a review.",
+  "loading_reviews": "Loading reviews",
+  "min_rating": "Min Rating",
+  "any": "Any",
+  "stars": "stars",
+  "product_comparison": "Product Comparison",
+  "add_to_compare": "Add to Compare",
+  "remove_from_compare": "Remove from Compare",
+  "no_products_to_compare_message": "Add up to 3 products to compare their features side-by-side.",
+  "browse_products": "Browse Products",
+  "clear_comparison": "Clear Comparison",
+  "feature": "Feature",
+  "remove": "Remove",
+  "add_product": "Add Product",
+  "description": "Description",
+  "category": "Category",
+  "share_this_product": "Share this product"
 }
